[package]
name = "AoC_2022_rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1"
path = "src/bin/calorie_counting.rs"

[[bin]]
name = "day2"
path = "src/bin/rock_paper_scissors.rs"
