[package]
name = "AoC_2022_rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.4"

[[bin]]
name = "day1"
path = "src/bin/calorie_counting.rs"

[[bin]]
name = "day2"
path = "src/bin/rock_paper_scissors.rs"

[[bin]]
name = "day3"
path = "src/bin/rucksack_reorganization.rs"

[[bin]]
name = "day4"
path = "src/bin/camp_cleanup.rs"

[[bin]]
name = "day5"
path = "src/bin/supply_stacks.rs"

[[bin]]
name = "day5"
path = "src/bin/tuning_trouble.rs"
